Fix horizontal scroll bar from appearing

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,12 +1,12 @@
 /*//////////////*/
- /* GENERAL CSS */
+/* GENERAL CSS */
 /*//////////////*/
 
 html {
-  overflow-y: scroll;
 }
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
